2006-03-13  Christopher Faylor  <cgf@timesys.com>

	* child_info.h (child_info_fork::handle_failure): Declare new function.
	(child_info_fork::retry): New field.
	* dcrt0.cc (__api_fatal_exit_val): Define.
	(child_info_fork::handle_failure): Define new function.
	(__api_fatal): Exit using __api_fatal_exit_val value.
	* environ.cc (set_fork_retry): Set fork_retry based on CYGWIN
	environment variable.
	(parse_thing): Add "fork_retry" setting.
	* fork.cc (fork_retry): Define.
	(frok::parent): Reorganize to allow retry of failed child creation if
	child signalled that it was ok to do so.
	* heap.cc (heap_init): Signal parent via handle_failure when
	VirtualAlloc fails.
	* pinfo.h (EXITCODE_RETRY): Declare.
	* sigproc.cc (child_info::sync): Properly exit with failure condition
	if called for fork and didn't see subproc_ready.
	* spawn.cc (spawn_guts): Use windows pid as first argument.
	* winsup.h: Remove obsolete NEW_MACRO_VARARGS define.
	(__api_fatal_exit_val): Declare.
	(set_api_fatal_return): Define.
	(in_dllentry): Declare.
	* exceptions.cc (inside_kernel): Remove unneeded in_dllentry
	declaration.

2006-03-13  Christopher Faylor  <cgf@timesys.com>

	* dcrt0.cc (dll_crt0_0): Reorganize so that sigproc_init is called a
	little later.  Add a comment.
	* fork.cc (resume_child): Make void.
	(frok::parent): Only zero pi when necessary.  Explicitly zero si.  Set
	this_errno when child_copy fails.  Accommodate change to resume_child.
	* sigproc.cc (sigalloc): Move global_sigs initialization here.
	(sigproc_init): Move global_sigs.
	(sig_send): Just check for flush signals once.

	* wincap.h: Define supports_setconsolectrlhandler_null throughout.
	* wincap.cc: Ditto.

2006-03-13  Corinna Vinschen  <corinna@vinschen.de>

	* autoload.cc (LoadDLLfuncNt): New define to wrap NT native functions.
	Use for NT native functions throughout.
	* dtable.cc (handle_to_fn): Treat return value of NtQueryObject as
	NTSTATUS value.

2006-03-12  Christopher Faylor  <cgf@timesys.com>
